port(api): 网络层降回 NumenPayload/FriendlyByteBuf,config-phase 前形态与 Java 17 落地
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>